[tool.poetry]
name = "streamlit-demo"
version = "0.1.0"
description = ""
authors = ["EvaJau <evaj@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.4"
matplotlib = "^3.3.2"
streamlit = "^0.70.0"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
